# KOLOKWIUM2

./: CMakeLists.txt  Makefile
zad4/: CMakeLists.txt
